fixed layout bug in the hero section, and make minor changes to the positioning of the elements in the hero section

--- a/style.css
+++ b/style.css
@@ -43,10 +43,10 @@ header {
 .header-logo {
     align-items: center;
     justify-content: start;
-    padding-left: 9rem;
+    padding-left: 144px;
     background-color: #1f2937;
     width: 100%;
-    font-size: 1.5rem;
+    font-size: 24px;
     cursor: pointer;
 }
 
@@ -76,6 +76,8 @@ ul {
     background-color: #1f2937;
     display: flex;
     padding-bottom: 230px;
+    padding-top: 120px;
+    padding-left: 100px;
 }
 
 /* HERO TITLE IN HERO SECTION */
@@ -85,18 +87,20 @@ ul {
     color: #f9faf8;
     width: 60%;
     padding-right: 10rem;
-    padding-left: 10rem;
-    padding-top: 4.5rem;
+    padding-left: 64px;
+    padding-top: 48px;
     position: relative;
+    line-height: 45px;
 }
 
 /* P TAG (SUBTEXT) IN HERO SECTION */
 .hero .hero-subtitle {
     color: #e5e7eb;
-    font-size: 18px;
+    font-size: 16px;
     position: absolute;
+    padding-left: 6px;
     top: 17rem;
-    left: 10rem;
+    left: 161px;
     width: 30%;
 }
 
@@ -105,31 +109,37 @@ ul {
     position: absolute;
     background-color: #3882f6;
     color: white;
-    top: 22.3rem;
-    left: 10rem;
+    top: 345px;
+    left: 164px;
     border: 1px solid transparent;
-    padding: 5px 20px;
+    padding-top: 7px;
+    padding-bottom: 7px;
     cursor: pointer;
     border-radius: 0.55rem;
-    width: 8rem;
-    height: 2.3rem;
+    width: 92px;
+    height: 42px;
     text-align: center;
-    font-size: 1.1rem;
+    font-size: 18px;
 }
 
-/* IMAGE WITH TEXT */
+
+/* IMAGE CONTAINER WITH TEXT */
 .hero div {
     display: flex;
     justify-content: center;
     align-items: center;
     color: #e5e7eb;
-    height: 250px;
+    height: 235px;
     width: 500px;
+    padding-right: 80px;
+    padding-left: 80px;
     background-color: #727880;
     position: absolute;
-    top: 9rem;
+    top: 161px;
     left: 43.3rem;
     font-size: 1.1rem;
+    padding-right: 100px; 
+    border-radius: 10px;
 }
 
 /* 2ND SECTION CONTAINER */
